alignment issue

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -72,6 +72,9 @@ p {
   width: 37%;
   padding: 5px;
 }
+.item-input-type span {
+  top: 20px !important;
+}
 .project-name {
   color: #00aaa7;
 }
