--- a/www/less/misc.less
+++ b/www/less/misc.less
@@ -72,6 +72,10 @@ html,html * {
     width: 37%;
     padding: 5px;
 	}
+	span{
+		 top: 20px !important;
+
+	}
 }
 // .activated{
 // 	background: #FFFCE7;
